--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <div class="container">
-        <div class="box">
+        <div class="box1">
+            ANIMATE
+        </div>
+        <div class="box2">
             ANIMATE
         </div>
     </div>
